--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ img#impresoraButton {
         <div id="thermal-pos">
         
         <div class="label">
-             <img class="boton" src="dry.png" class="ImganelLogo" width= "60%" id "foto">
+             <img class="boton" src="Laundry.png" class="ImganelLogo" width= "50%" id "foto">
             <br/>
             <p class="info-tienda">
                  Av Juan de aliaga 729,Magdalena del Mar
