--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ img#impresoraButton {
         
         
         <div class="ticket">
-            <b>TICKETT:<br>
+            <b>TICKET:<br>
             <h1 class="nro_boleta" id="nro_boleta_id" ></h1>
          </div>
         <div class="fecharecep">
